# game_vault

./: .gitignore  README.md  pyproject.toml
src/: scrap.py
src/chess/: README.md  board.py  game_functions.py  main.py  pieces.py  support_functions.py
src/pong/: main.py
src/snake/: game_functions.py  game_objects.py  main.py  resource_handling.py
src/x_platformer/: game.py  level_editor.py  sample.json
src/x_platformer/game_functions/: collision_checks.py
src/x_platformer/game_objects/: entities.py  tile_map.py
src/x_platformer/level_editior/: level_editor.py
src/x_platformer/resource_handling/: image_load.py
